# foundation-pose-trt

./: README.md
foundation_pose/: CMakeLists.txt  package.xml
foundation_pose/include/foundation_pose/: foundation_pose.hpp  trt_engine.hpp  yolo.hpp
foundation_pose/launch/: yolo_ros.launch.py
foundation_pose/src/: foundation_pose.cpp  foundation_pose_node.cpp  trt_engine.cpp  trt_engine_node.cpp  yolo.cpp
scripts/: convert_onnx.sh
